fixed arrow btn spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -93,6 +93,7 @@ li {
   height: 50px;
   font-size: 1.3rem;
   border-radius: 100px;
+  margin: 1rem;
 }
 .card-icon {
   display: flex;
